--- a/.github/workflows/glue-test.yml
+++ b/.github/workflows/glue-test.yml
@@ -49,15 +49,15 @@ jobs:
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
-        working-directory: terraform/
+        working-directory: Terraform/
         run: terraform init
 
       - name: Terraform Validate
-        working-directory: terraform/
+        working-directory: Terraform/
         run: terraform validate
 
       - name: Terraform Apply with Variables
-        working-directory: terraform/
+        working-directory: Terraform/
         run: |
           terraform apply -auto-approve \
             -var="aws_region=${{ secrets.AWS_REGION }}" \
@@ -129,7 +129,7 @@ jobs:
 
       - name: Terraform Destroy (Cleanup)
         if: always()
-        working-directory: terraform/
+        working-directory: Terraform/
         run: |
           echo "Destroying all Terraform-managed resources..."
           terraform destroy -auto-approve \
